Fix styling issue with box-sizing, changed order of aside on mobile for blog

--- a/styles/sass/_mediaQueries.scss
+++ b/styles/sass/_mediaQueries.scss
@@ -24,7 +24,7 @@ BLOG
     }
 
     .blogContainer {
-        flex-direction: column;
+        flex-direction: column-reverse;
 
         aside {
             margin: 0;
